--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,10 @@
   <!--PC用（901px以上端末）メニュー-->
   <nav id="menubar">
   <ul>
-  <li><a href="readme.html">NEWS</a></li>
-  <li><a href="news.html">ABOUT US</a></li>
+  <li><a href="readme.html">ABOUT US</a></li>
+  <li><a href="news.html">CLOTHING</a></li>
   <li><%= link_to "BLOG", blogs_path %></li>
-  <li><a href="event.html">EVENT</a></li>
+  <li><%= link_to "EVENT", events_path %></li>
   <li><a href="contact.html">CONTACT</a></li>
   </ul>
   </nav>
