--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -11,7 +11,7 @@
 <caption><a href="#"><%= event.title %></a></caption>
 <tr>
 <th><%= event.created_at.to_s(:datetime_jp) %></th>
-<td><%= event.text %></td>
+<td><%= event.content %></td>
 </tr>
 
 </table>
