--- a/app/views/abouts/index.html.erb
+++ b/app/views/abouts/index.html.erb
@@ -1,4 +1,7 @@
-
+<body>
+<header>
+<%= render "layouts/header"%>
+</header>
 <div id="contents">
 
 <div id="main">
@@ -15,7 +18,6 @@
 <% end %>
 </section>
 
-</div>
 
 </div>
 
@@ -28,4 +30,5 @@
 <small>Copyright&copy; <a href="index.html">INDIES BAND</a> All Rights Reserved.</small>
 <span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </footer>
+</body>
 
