--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,11 @@
+<body>
+
+<div id="container">
+
+<header>
+<%= render "layouts/header"%>
+</header>
+
 <div id="contents">
 
 <div id="main">
@@ -27,7 +35,6 @@
 <!--/#sub-->
 
 </div>
-<!--/#contents-->
 
 <footer>
 <small>Copyright&copy; <a href="index.html">INDIES BAND</a> All Rights Reserved.</small>
@@ -35,3 +42,35 @@
 </footer>
 
 </div>
+<!--/#container-->
+
+<!--小さな端末用（900px以下端末）メニュー-->
+<nav id="menubar-s">
+<ul>
+<li><a href="readme.html">READ ME</a></li>
+<li><a href="news.html">NEWS</a></li>
+<li><a href="profile.html">PROFILE</a></li>
+<li><a href="event.html">EVENT</a></li>
+<li><a href="discography.html">DISCOGRAPHY</a></li>
+<li><a href="contact.html">CONTACT</a></li>
+</ul>
+</nav>
+
+<!--ページの上部に戻る「↑」ボタン-->
+<p class="nav-fix-pos-pagetop"><a href="#">↑</a></p>
+
+<!--メニュー開閉ボタン-->
+<div id="menubar_hdr" class="close"></div>
+
+<!--メニューの開閉処理条件設定　900px以下-->
+<script>
+if (OCwindowWidth() <= 900) {
+	open_close("menubar_hdr", "menubar-s");
+}
+</script>
+
+<!--パララックス用ファイル読み込み-->
+<script src="js/jquery.inview.js"></script>
+<script src="js/jquery.inview_set.js"></script>
+
+</body>
