--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,4 +1,10 @@
+<body class="home">
 
+<div id="container">
+
+<header>
+<%= render "layouts/header"%>
+</header>
 
 <div id="contents">
 
@@ -28,7 +34,29 @@
 </div>
 <!--/#container-->
 
+<!--小さな端末用（900px以下端末）メニュー-->
+<nav id="menubar-s">
+<ul>
+<li><%= link_to "ABOUT", abouts_path %></li>
+<li><a href="news.html">CLOTHING</a></li>
+<li><%= link_to "BLOG", blogs_path %></li>
+<li><%= link_to "EVENT", events_path %></li>
+<li><a href="contact.html">CONTACT</a></li>
+</ul>
+</nav>
 
+<!--ページの上部に戻る「↑」ボタン-->
+<p class="nav-fix-pos-pagetop"><a href="#">↑</a></p>
+
+<!--メニュー開閉ボタン-->
+<div id="menubar_hdr" class="close"></div>
+
+<!--メニューの開閉処理条件設定　900px以下-->
+<script>
+if (OCwindowWidth() <= 900) {
+	open_close("menubar_hdr", "menubar-s");
+}
+</script>
 
 <!--ロゴアニメーション-->
 <script>
@@ -41,3 +69,5 @@ new Vivus('svg-logo', {
 <!--パララックス用ファイル読み込み-->
 <script src="js/jquery.inview.js"></script>
 <script src="js/jquery.inview_set.js"></script>
+
+</body>
