ヘッダーのインスタにリンク追加

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,6 @@
 <ul class="icon">
 <li><a href="#"><img src="/icon_facebook.png" alt="Facebook"></a></li>
 <li><a href="#"><img src="/icon_twitter.png" alt="Twitter"></a></li>
-<li><a href="#"><img src="/icon_instagram.png" alt="Instagram"></a></li>
+<li><a href="https://www.instagram.com/tabata_shoten/?hl=ja"><img src="/icon_instagram.png" alt="Instagram"></a></li>
 <li><a href="#"><img src="/icon_youtube.png" alt="YouTube"></a></li>
 </ul>
