--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -372,6 +372,7 @@ figure + .text {
 ---------------------------------------------------------------------------*/
 /*テーブル１行目に入った見出し部分（※caption）*/
 .ta1 caption {
+	height: 40px;
 	border: 1px solid #000;	/*テーブルの枠線の幅、線種、色*/
 	border-bottom: none;	/*下線だけ消す*/
 	text-align: left;		/*文字を左寄せ*/
