--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
 <nav id="menubar">
 <ul>
 <li><%= link_to "ABOUT", abouts_path %></li>
-<li><%= link_to "CLOTHING", items_path %></li>
+<li><%= link_to "ITEMS", items_path %></li>
 <li><%= link_to "BLOG", blogs_path %></li>
 <li><%= link_to "EVENT", events_path %></li>
 <li><a href="#">CONTACT</a></li>
