--- a/app/assets/stylesheets/items.css
+++ b/app/assets/stylesheets/items.css
@@ -1,9 +1,10 @@
 .items{
   flex-wrap:wrap;
   display:flex;
+  justify-content: space-evenly;
 }
 
-.instagram-media{
-  margin: 0 40px 30px 0 !important;
-  max-width: 20% !important;
+.item{
+  margin: 0 40px 15px 40px;
+  max-width: 20%;
 }
