--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -42,3 +42,33 @@
 </div>
 <!--/#container-->
 
+<!--小さな端末用（900px以下端末）メニュー-->
+<nav id="menubar-s">
+<ul>
+<li><a href="readme.html">READ ME</a></li>
+<li><a href="news.html">NEWS</a></li>
+<li><a href="profile.html">PROFILE</a></li>
+<li><a href="event.html">EVENT</a></li>
+<li><a href="discography.html">DISCOGRAPHY</a></li>
+<li><a href="contact.html">CONTACT</a></li>
+</ul>
+</nav>
+
+<!--ページの上部に戻る「↑」ボタン-->
+<p class="nav-fix-pos-pagetop"><a href="#">↑</a></p>
+
+<!--メニュー開閉ボタン-->
+<div id="menubar_hdr" class="close"></div>
+
+<!--メニューの開閉処理条件設定　900px以下-->
+<script>
+if (OCwindowWidth() <= 900) {
+  open_close("menubar_hdr", "menubar-s");
+}
+</script>
+
+<!--パララックス用ファイル読み込み-->
+<script src="js/jquery.inview.js"></script>
+<script src="js/jquery.inview_set.js"></script>
+
+</body>
